--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <button
                   type="button"
                   class="btn btn-success me-2"
-                  id="doneBtn"
+                  id="Done"
                   disabled
                 >
                   Done
@@ -94,7 +94,7 @@
                 <button
                   type="button"
                   class="btn btn-danger"
-                  id="notDoneBtn"
+                  id="NotDone"
                   disabled
                 >
                   Not Done
@@ -177,13 +177,13 @@
                     />
                   </div>
                   <div class="col-md-6">
-                    <label for="noKawianInternal" class="form-label">No Kawian Internal</label>
+                    <label for="noKawianInternal" class="form-label">No Kawan Internal</label>
                     <input
                       type="text"
-                      id="noKawianInternal"
+                      id="noKawanInternal"
                       class="form-control"
                       name="entry.66778"
-                      placeholder="Masukkan No Kawian Internal"
+                      placeholder="Masukkan No Kawan Internal"
                     />
                   </div>
                 </div>
@@ -212,13 +212,13 @@
                 </div>
 
                 <div class="mb-3">
-                  <label for="noOdm" class="form-label">No Odm</label>
+                  <label for="noOdm" class="form-label">No Odr</label>
                   <input
                     type="text"
-                    id="noOdm"
+                    id="noOdr"
                     class="form-control"
                     name="entry.55667"
-                    placeholder="Masukkan No Odm"
+                    placeholder="Masukkan No Odr
                   />
                 </div>
 
