--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div id="googleFormLink" class="mt-3 d-none">
               <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
-              <a href="form.html" target="_blank" class="btn btn-primary"
+              <a href="#" class="btn btn-primary"
                 >Isi Form</a
               >
             </div>
