--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@
             </div>
             <div id="googleFormLink" class="mt-3 d-none">
               <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
-              <a href="#" class="btn btn-primary" id="toggleReportForm"
-                >Isi Form</a
-              >
+              <a href="#" class="btn btn-primary" id="toggleReportForm">Isi Form</a>
             </div>
             <!-- Tambahkan form di bawah tombol Isi Form -->
           <div id="dynamicForm" class="mt-3 d-none">
@@ -1035,7 +1033,25 @@
 
         paginationControls.innerHTML = "";
       });
-
+      <script>
+      // Script untuk menampilkan form isi FAQ di bawah tombol Isi Form
+      document.addEventListener('DOMContentLoaded', function () {
+        const toggleFormBtn = document.getElementById('toggleReportForm');
+        const dynamicForm = document.getElementById('dynamicForm');
+      
+        if (toggleFormBtn && dynamicForm) {
+          toggleFormBtn.addEventListener('click', function (e) {
+            e.preventDefault();
+            // Tampilkan form
+            dynamicForm.classList.remove('d-none');
+            // Optional: Scroll ke form
+            dynamicForm.scrollIntoView({ behavior: 'smooth' });
+            // Optional: sembunyikan tombol
+            toggleFormBtn.classList.add('d-none');
+          });
+        }
+      });
+      </script>
       // Tambahkan event listener untuk tombol "Isi Form"
     document
         .getElementById("errorSystem")
