--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                 >Isi Form</a
               >
             </div>
+            <div id="formHtmlContainer" class="mt-4"></div>
+              <button id="showFormHtmlBtn" type="button" class="btn btn-info mt-2">
             <div id="dynamicForm" class="mt-3 d-none">
               <form id="reportForm">
                 <div class="mb-3">
@@ -282,7 +284,36 @@
         </div>
       </div>
     </div>
+<script>
+  const showFormHtmlBtn = document.getElementById("showFormHtmlBtn");
+  const formHtmlContainer = document.getElementById("formHtmlContainer");
 
+  let isFormHtmlLoaded = false;
+
+  showFormHtmlBtn.addEventListener("click", function() {
+    if (!isFormHtmlLoaded) {
+      // Ambil isi form.html dan tampilkan
+      fetch("form.html")
+        .then(response => {
+          if (!response.ok) throw new Error("Gagal memuat form.html");
+          return response.text();
+        })
+        .then(html => {
+          formHtmlContainer.innerHTML = html;
+          isFormHtmlLoaded = true;
+          showFormHtmlBtn.textContent = "Sembunyikan Form Tambahan";
+        })
+        .catch(err => {
+          formHtmlContainer.innerHTML = `<div class="alert alert-danger">${err.message}</div>`;
+        });
+    } else {
+      // Sembunyikan form.html
+      formHtmlContainer.innerHTML = "";
+      isFormHtmlLoaded = false;
+      showFormHtmlBtn.textContent = "Tampilkan Form Tambahan";
+    }
+  });
+</script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
