--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                     />
                   </div>
                   <div class="col-md-6">
-                    <label for="noKawianInternal" class="form-label">No Kawian Internal</label>
+                    <label for="noKawanInternal" class="form-label">No Kawan Internal</label>
                     <input
                       type="text"
-                      id="noKawianInternal"
+                      id="noKawanInternal"
                       class="form-control"
-                      name="entry.noKawianInternal"
-                      placeholder="Masukkan No Kawian Internal"
+                      name="entry.noKawanInternal"
+                      placeholder="Masukkan No Kawan Internal"
                     />
                   </div>
                 </div>
@@ -212,13 +212,13 @@
                 </div>
 
                 <div class="mb-3">
-                  <label for="noOdm" class="form-label">No Odm</label>
+                  <label for="noOdr" class="form-label">No Odr</label>
                   <input
                     type="text"
-                    id="noOdm"
+                    id="noOdr"
                     class="form-control"
-                    name="entry.noOdm"
-                    placeholder="Masukkan No Odm"
+                    name="entry.noOdr"
+                    placeholder="Masukkan No Odr"
                   />
                 </div>
 
@@ -856,10 +856,10 @@
         params.append("entry.namaCust", formData.get("entry.namaCust"));
         params.append("entry.custID", formData.get("entry.custID"));
         params.append("entry.picInput", formData.get("entry.picInput"));
-        params.append("entry.noKawianInternal", formData.get("entry.noKawianInternal"));
+        params.append("entry.noKawanInternal", formData.get("entry.noKawanInternal"));
         params.append("entry.taskIDPolo", formData.get("entry.taskIDPolo"));
         params.append("entry.noAPP", formData.get("entry.noAPP"));
-        params.append("entry.noOdm", formData.get("entry.noOdm"));
+        params.append("entry.noOdr", formData.get("entry.noOdr"));
         params.append("entry.issue", formData.get("entry.issue"));
 
         // Optionally, append selected FAQ details if relevant to this report form
