--- a/index.html
+++ b/index.html
@@ -409,15 +409,20 @@
 
       // Dummy data for the report form dropdowns (replace with actual data/API calls if needed)
       const reportFormDropdownData = {
-        brands: ["WOM Motor", "WOM Mobil", "WOM Property"],
-        errorSistems: ["Input Error", "System Down", "Data Mismatch", "Lain-lain"],
-        regions: ["Jawa Barat", "Jawa Tengah", "Jawa Timur", "Sumatera", "Kalimantan"],
+        brands: ["Reguler", "MasKu", "MotorKu", "Mobilku"],
+        errorSistems: ["KI", "MSS", "WISE", "Login"],
+        regions: ["BANTEN", "JAWA BARAT", "JABODEBEK", "JATENGSEL", "JATIM BALI", "JATENGUT", "KALIMANTAN", "SULAWESI", "SUMBAGSEL", "SUMBAGUT"],
         cabangs: {
-          "Jawa Barat": ["Bandung", "Cirebon", "Bogor"],
-          "Jawa Tengah": ["Semarang", "Solo", "Yogyakarta"],
-          "Jawa Timur": ["Surabaya", "Malang", "Kediri"],
-          "Sumatera": ["Medan", "Palembang", "Padang"],
-          "Kalimantan": ["Pontianak", "Banjarmasin", "Samarinda"],
+          "BANTEN": ["Bandung", "Cirebon", "Bogor"],
+          "JAWA BARAT": ["Semarang", "Solo", "Yogyakarta"],
+          "JABODEBEK": ["BU JABODEBEK", "Jakarta Utara 2 Penjaringan", "Gudang Jati Asih", "Bekasi 1 Bekasi Barat", "Gudang Wanaherang", "Jakarta Pusat", "Jakarta Selatan 1 Pasar Minggu", "Bogor", "Cibinong", "Jakarta Selatan 2 Kebayoran Lama", "Karawang", "Bekasi 2 Tambun Selatan", "Jakarta Utara 1 Cilincing", "Leuwiliang", "Jakarta Barat 2 Kebon Jeruk", "Daan Mogot", "Cikarang", "Bogor 4 Jonggol", ],
+          "JATENGSEL": ["Medan", "Palembang", "Padang"],
+          "JATIM BALI": ["Bandung", "Cirebon", "Bogor"],
+          "JATENGUT": ["Bandung", "Cirebon", "Bogor"],
+          "KALIMANTAN": ["Pontianak", "Banjarmasin", "Samarinda"],
+          "SULAWESI": ["Bandung", "Cirebon", "Bogor"],
+          "SUMBAGSEL": ["Bandung", "Cirebon", "Bogor"],
+          "SUMBAGUT": ["Bandung", "Cirebon", "Bogor"],
         },
       };
 
